--- a/src/content/posts/articles/orcs-tactics-lore-encounters.mdx
+++ b/src/content/posts/articles/orcs-tactics-lore-encounters.mdx
@@ -23,6 +23,344 @@ tags:
 [Скачать ORCS - TACTICS ENCOUNTERS LORE - REV04 17122022.pdf](/files/downloads/ORCS - TACTICS ENCOUNTERS LORE - REV04 17122022.pdf)
 [Скачать ORCS - TACTICS ENCOUNTERS LORE - REV04 17122022.docx](/files/downloads/ORCS - TACTICS ENCOUNTERS LORE - REV04 17122022.docx)
 
+## Базовая информация
+
+
+Орки — дикие грабители и налётчики; у них сутулая осанка, низкий лоб и свиноподобные лица с выступающими нижними клыками, напоминающими бивни.
+Груумш Одноглазый. Орки поклоняются Груумшу, сильнейшему из орочьих богов, являющемуся также их создателем. Орки верят, что в древние времена боги собрались и поделили мир между своими последователями. Когда Груумш выбрал горы, оказалось, что их уже забрали дварфы. Тогда он выбрал леса, но там уже поселились эльфы. Что бы ни выбирал Груумш, всё уже было занято. Другие боги смеялись над Груумшем, а он отвечал яростным рёвом. Схватив своё могучее копьё, он опустошил горы, сжёг леса и прорезал в полях огромные овраги. Такова будет роль орков, объявил он, — забирать силой или уничтожать всё, в чем другие расы им отказывают. И по сей день орки ведут нескончаемую войну с людьми, эльфами, дварфами и прочими народами.
+
+Оркам особенно ненавистны эльфы. Эльфийский бог Кореллон Ларетиан наполовину ослепил Груумша метким выстрелом из лука прямо ему в глаз. С тех пор орки испытывают особую радость, убивая эльфов. Превращая эту травму в ужасный дар, Груумш дарует божественную мощь любому своему воину, который добровольно лишает себя одного глаза в его честь.
+
+Племена как чума. Орки собираются в племена, которые распространяют свою власть и утоляют кровожадность, разграбляя деревни, пожирая или прогоняя бродячие стада, и убивая любых гуманоидов, которые осмелятся выступить против них. После уничтожения поселения орки дочиста разграбляют все сокровища и иные полезные вещи, которые можно использовать в своих землях. Остатки деревень или стоянок они сжигают, а затем уходят туда, откуда пришли, утолив свою жажду крови.
+
+Странствующие падальщики. Жажда разрушения толкает орков селиться в пределах досягаемости новых целей. Они редко оседают на местах и не преобразовывают руины, пещерные комплексы и деревни побеждённых врагов в свои укреплённые лагеря и крепости. Орки строят только для защиты, не внося в постройки никаких новшеств или улучшений, ограничиваясь грубыми частоколами с насаженными телами своих врагов или траншеями и рвами с торчащими из них колами.
+
+Когда на захваченной территории заканчивается пища, племя орков делится на бродячие банды, которые ищут новые земли для охоты. Когда они возвращаются с трофеями и новостями, выбирается следующая самая богатая цель. Затем племя движется всей массой, проделывая свой кровавый путь к новой территории.
+
+В редких случаях лидер племени решает закрепиться в укреплённом логове на несколько десятков дней. Орки такого племени разбредаются по большой территории, чтобы прокормить себя.
+
+Лидерство и мощь. Племена орков в основном патриархальны и щеголяют яркими и кричащими названиями, такими как Многострелы, Кричащий глаз, Губители эльфов. Время от времени могущественный военный вождь объединяет рассеянные племена орков в единую неистовую орду, которая попирает другие племена и поселения людей с позиции силы.
+
+Сила и власть — величайшие добродетели орков, и они принимают в свои племена всех могучих существ. Отвергая представления о расовой чистоте, они с гордостью приветствуют огров, троллей, полуорков и орогов в своих рядах. Орки также уважают и боятся размера и силы злых великанов, и часто выступают в роли их охранников и солдат.
+
+Орочьи полукровки. Лутик, орочья богиня плодородия и жена Груумша, требует от орков постоянного и безразборного деторождения, тем самым увеличивая орду поколение за поколением. Стремление к размножению у орков сильнее, чем у остальных рас, и они легко скрещиваются с другими видами. При скрещивании с гуманоидом аналогичного размера и роста (например, человеком или дварфом), потомством будет орк или полуорк. В случаях скрещивания с огром, потомством будет полуогр с пугающей силой и грубыми чертами, называемый огриллоном.
+
+### Око Груумша
+
+Когда орк убивает эльфа во имя Груумша и преподносит ему тело врага как жертву, может появиться проявление бога. Он требует добавочной жертвы: один глаз орка, как символ потери Груумша от рук его великого врага Кореллона Ларетиана.
+
+Если орк вырывает свой глаз, Груумш может одарить его способностью к заклинаниям и особой благосклонностью, также как и правом называть себя Оком Груумша. Этот дикий поборник бога резни даёт советы вождю предсказаниями, а в бою бросается первым, чтобы обагрить своё оружие кровью.
+
+### Военачальник
+
+Военачальник орков это самый сильный и коварный член племени. Его правление длится до тех пор, пока он поддерживает страх и уважение среди членов племени и регулярно удовлетворяет их кровожадность, иначе он будет казаться слабым.
+
+Наследники резни. Груумш дарует особые благословления вождям, которые постоянно проявляют себя в бою, и наполняет их частичкой своей дикости. Одарённый военачальник обнаруживает, что его оружие врезается глубже во врагов, позволяя ему устраивать большую бойню.
+
+### Король Обальд Многострел
+
+Король Обальд из племени Многострелов — легенда среди боевых вождей Забытых Королевств, и самый знаменитый вождь орков в истории D&D.
+
+Будучи умнее и интуитивнее, чем большинство орков, Обальд убил своего вождя, чтобы занять его место. Искусный в военном деле и известный своим буйным нравом, он прослыл свирепым противником в бою. На протяжении многих лет он присоединял другие племена к своему, пока не возглавил орду тысяч.
+Обальд использовал свою силу и влияние, выкраивая себе царство на Хребте Мира — гряде гор, контролируемых многочисленными крепостями дварфов, людей и эльфов.
+
+После годов кровавого конфликта с более цивилизованными соседями, Обальд сделал немыслимое, и заключил мирный договор с врагами. Этот договор смутил многих орков, находившихся под его командованием. Договор был либо хитрой уловкой Обальда, чтобы выиграть время для усиления армии и решающего натиска на Дикие Рубежи, либо он служил тревожным признаком того, что Обальд оставил пути Груумша и подлежит уничтожению.
+
+### Ороги
+
+> Примечание Паланта. Это только одна из версий.
+
+Ороги это орки, одарённые удивительным интеллектом, который обычные орки считают даром богини Лутик. Как и их богиня, ороги предпочитают жить под землёй, но нехватка пищи часто приводит их на поверхность для охоты. Орки уважают силу и хитрость орогов, и один орог может возглавить военную банду орков.
+
+Сильные и умные. Ороги используют свою силу, чтобы запугивать других орков, и свой интеллект, чтобы удивлять врагов на поле боя. Многие самоуверенные командиры эльфов, людей и дварфов наблюдали как «простой» военачальник орков выполняет хитрый манёвр с фланга и уничтожает вражескую силу, и им невдомёк, что им противостоял орог.
+
+Когда ороги встречаются в большом количестве, они собирают свои собственные отряды в составе большой орды. Они всегда на передовой линии атаки. Опираясь на превосходство в силе и знание тактики, ороги преодолевают всё, что встаёт на их пути.
+
+Некоторые племена орков специально ищут орогов для усиления своих рядов. Превосходство орогов делает их идеальными лидерами и смертельными противниками для боевых вождей, которые должны опасаться вероломства орогов.
+
+Отрешённые убийцы. Не желая ничего кроме разрубания своих врагов на куски, своим присутствием ороги являют ужас на поле боя. У них нет привязанности к родителям, братьям и сёстрам, а также им чужды понятия любви и преданности. Они поклоняются орочьему пантеону богов — Груумшу и Лутик — потому что верят, что они имеют запредельную силу, а физическая мощь это всё, что они уважают.
+
+Слуги тьмы. Не имеющие доверия среди орков, некоторые ороги образуют отряды наёмников, которые продают свои услуги тому, кто заплатит больше остальных. До тех пор, пока им платят, наёмники ороги служат элитными воинами и ударными отрядами для злых колдунов, порочных великанов и других злодеев.
+
+### ВСПОМОГАТЕЛЬНЫЕ СТАТБЛОКИ
+
+Следующие статблоки с использованием шаблонов орков помогают разнообразить стандартных орков.
+
+-	Берсеркер (ПО 2)
+-	Ветеран (ПО 3)
+-	Воин племени (ПО 1/8)
+-	Гладиатор (ПО 5)
+-	Головорез (ПО ½)
+-	Друид (ПО 2)
+-	Разведчик (ПО ½)
+-	Священник (ПО 2)
+
+### ВОЗМОЖНЫЕ СОЮЗНИКИ ОРКОВ
+
+-	Рабы гоблины
+-	Хобгоблины наемники
+-	Огры и полуогры
+-	Тролли
+-	Ворги и волки
+-	Гигантские летучие мыши
+-	Аурохи и наездники на аурохах
+-	Боевые фургоны
+
+
+### Описание
+
+Орки — вид агрессивных плотоядных млекопитающих, которые объединяются в племена и выживают за счет охоты и набегов. Орки считают, что для того, чтобы выжить, они должны расширять свою территорию, и поэтому они постоянно вовлечены в войны против множества врагов: людей, эльфов, гномов, гоблинов и других орочьих племен.
+
+Орки сильно различаются по внешнему виду, так как они часто скрещиваются с другими видами. В целом они напоминают первобытных людей с серо-зеленой кожей, покрытой жесткими волосами. У орков слегка сутулая осанка, низкий выступающий лоб и морда вместо носа, хотя сравнение этой черты лица со свиньями преувеличено и, возможно, несправедливо.
+
+Орки имеют хорошо развитые клыки для поедания мяса и короткие заостренные уши, напоминающие волчьи. Морда и уши орков имеют слегка розовый оттенок. Их глаза человеческие, с красноватым оттенком, который иногда заставляет их светиться красным, когда они отражают тусклые источники света в почти полной темноте.
+
+Мужские орки имеют рост от 5 до 6 футов. Самки в среднем на 6 дюймов короче самцов. Орки предпочитают носить цвета, которые большинству людей кажутся неприятными: кроваво-красный, ржаво-красный, горчично-желтый, желто-зеленый, мохово-зеленый, зеленовато-фиолетовый и черновато-коричневый. К тому же доспехи у них непривлекательные — грязные и часто немного ржавые. Орки говорят на оркском, языке, происходящем от древних человеческих и эльфийских языков.
+
+Общего стандарта оркского языка не существует, поэтому в языке есть много диалектов, которые варьируются от племени к племени. Орки также научились говорить на местных общих языках, но чувствуют себя с ними некомфортно. Некоторые орки имеют ограниченный словарный запас на диалектах гоблинов, хобгоблинов и огров.
+
+### Среда / общество
+
+На каждые три встреченных орка приходится лидер и три помощника. Эти орки будут иметь по 22 хита каждый, будучи самыми злыми и сильными в группе.
+1 orc champion and 3 orc bodyguards per 3 orcs
+
+Если встретится 150 или более орков, в банде будут следующие дополнительные фигуры: один подвождь и 3d6 охранников, каждый с классом защиты 14, 30 хитами и 18 силой. Они сражаются как монстры с 2 КХ.
+
+If 150 or more orcs - 1 orc sub-chieftain, 3d6 orc bodyguards 
+
+На каждые 100 встреченных орков приходится либо шаман (максимум клерик 5-го уровня), либо знахарь (максимум чернокнижник 4-го уровня).
+
+1 orc shaman (cleric up to 7th level) or 1 orc witch doctor (warlock up to 6th level) per 100 orcs
+
+Если орки не находятся в своем логове, есть вероятность 20%, что они будут сопровождать поезд из 1d6 повозок и 1d6 x 10 рабовладельцев, несущих припасы, добычу или выкуп и дань своему вождю орков или более сильному племени орков.
+
+Train – 1d6 carts, 1d6*10 slavebearers
+
+Total cost = 10d100 sp and 5d6 sp per slavebearer
+
+If train is escorted Add 10 orcs per cart, 1 orc sub-chieftain and 5d6 orc bodyguards
+
+
+Общая стоимость товаров, перевозимых всеми повозками, будет варьироваться в пределах 10d100 серебряных монет, а каждый рабовладелец будет нести товары стоимостью от 5d6 серебряных монет.
+
+Если орки сопровождают поезд с сокровищами, удвойте количество лидеров и помощников и добавьте по 10 орков на каждую тележку в поезде; один подвождь с 5d6 охранников всегда будет главным.
+
+### Поведение
+
+Орки агрессивны. Они считают, что другие виды ниже их и что издевательства и рабство являются частью естественного порядка вещей. Они будут сотрудничать с другими видами, но на них нельзя положиться: как рабы, они будут восставать против всех, кроме самых могущественных хозяев; как союзники они быстро обижаются и нарушают соглашения.
+
+Орки считают битву идеальным испытанием, но некоторые лидеры достаточно прагматичны, чтобы признать ценность мира, за который они платят высокую цену. Если проявить большое терпение и осторожность, племена орков могут стать эффективными торговыми партнерами и военными союзниками.
+Орки ценят территорию превыше всего; боевой опыт, богатство и количество потомков - другие основные источники гордости. Орки патриархальны; женщины годятся только для того, чтобы рожать детей и кормить их грудью. Орки имеют заслуженную репутацию жестоких людей, но люди так же способны на зло, как и орки. У орков есть брачные обычаи, но орки-мужчины не отличаются верностью.
+
+Орки поклоняются многим божествам (некоторые из которых имеют разные имена в разных племенах); главное божество обычно гигантский одноглазый орк. Религия орков крайне ненавистна другим видам и призывает к насилию и войне. Шаманы орков были известны своими амбициями, и многие племена пострадали из-за этого.
+
+### Экология
+
+Средняя продолжительность жизни орков составляет 40 лет. У них период беременности составляет 10 месяцев, и они производят от двух до трех потомков за одно рождение. Детская смертность высока. Орки плотоядны, но полулюдям и гуманоидам предпочитают дичь или домашний скот.
+
+Говорят, что у орков нет естественных врагов, но они упорно трудятся, чтобы восполнить этот недостаток. Племена орков носят устрашающие имена, такие как Мерзкая Руна, Кровавая Голова, Сломанная Кость, Злой Глаз и Капающий Клинок.
+
+
+## ПРИМЕРЫ СТОЛКНОВЕНИЙ
+
+Играющие дети — Рядом с поселениями орков персонажи могут столкнуться с играющими от 2 до 5 молодых орков, полуорков и/или полуогров. Они могут притворяться охотничьим отрядом или группой налетчиков, но ключевое слово — притворяться. Партия с быстрой инициативой и плохими навыками суждения может очень быстро оказаться в целой куче неприятностей, если они не смогут отличить детей орков, притворяющихся налетчиками орков, от настоящих налетчиков орков. 
+
+Охотничья группа — дальше от поселений персонажи могут столкнуться с группами от 2 до 8 (2к4) орков или полуорков во главе с орогом. Они будут вооружены луками или пилумами, а также мечами. Они могут носить или не носить доспехи. Эти орки охотятся на животных. Возможно, они охотятся для развлечения, но, скорее всего, они охотятся за едой, шкурами, рогами и костями, либо для снабжения своей деревни, либо для продажи другим. Они могут быть недовольны тем, что делятся своими охотничьими угодьями, или могут окликнуть ИП и попытаться торговать. 
+
+Группа налетчиков — по всему лесу персонажи могут встретить от 5 до 10 орков(1к6+4), полуорков и/или полуогров во главе с орогом или, возможно, даже с Оком Груумша. Они будут вооружены для войны как дальнобойным оружием, так и оружием ближнего боя. Они обязательно будут в доспехах. Их могут сопровождать ворги. В зависимости от того, насколько они успешны, у них также может быть добыча и пленные рабы. Если они поверят, что могут взять компьютеры, то просто нападут. В противном случае они будут вести переговоры или пытаться избежать группы авантюристов. 
+
+Торговый караван — по всему лесу персонаж может встретить от 6 до 60 (10к6) орков, полуорков и/или полуогров, возможно, во главе с орогом. Большинство из них будут вооружены как метательным оружием, так и оружием ближнего боя, плюс все они будут носить доспехи. У них будет от 1 до 10 повозок (1к10), запряженных мулами или волами, наполненных товарами. Это деловые люди и их охрана. Они не заинтересованы в ИП, если они не хотят стать клиентами. Они будут упорно бороться, чтобы сохранить имущество, которое принадлежит им. 
+
+Военный отряд — по всему лесу персонажи могут встретить от 6 до 10 орков, полуорков и/или огриллионов во главе с орогом или, возможно, даже с Оком Груумша. Они будут вооружены для войны как ракетным оружием, так и оружием ближнего боя. Они обязательно будут в доспехах, и их могут сопровождать ворги. Большинство ИП НЕ смогли бы отличить отряд рейдов от отряда войны. Военные отряды несут знамёна; рейдеров нет. У военных отрядов есть свои цели, которые (вероятно) не имеют НИЧЕГО общего с целями ИП; налетчики просто хотят взять все, что они могут, у кого они могут. Пожалуй, самая показательная особенность в том, что отряды войны ведут себя скорее как дисциплинированные солдаты, чем как недисциплинированные бандиты. 
+
+Элементы Армии Кланов — Глубоко в лесу персонажи могут столкнуться с 60-600 орками, полуорками, ограми, троллями и полуограми во главе с орогами и Оками Груумша. Они будут вооружены для войны как дальнобойным оружием, так и оружием ближнего боя. Они обязательно будут в доспехах, и их могут сопровождать ворги. У них также, может быть, осадная техника и наемные войска. У них обязательно будут знамёна и (как и у любой армии в движении), если они столкнутся с персонажами во время движения по области, то они, скорее всего, попытаются захватить их, чтобы допросить их для получения информации, прежде чем отдать свои изломанные тела своим рабов-гоблинов есть.
+
+## ТАКТИКА ОРКОВ
+
+### Вариант 1
+
+Орки — неуклюжие звери. Очень высокая сила, очень высокое телосложение, ловкость выше среднего, интеллект гораздо ниже среднего. Они носят доспехи из шкур и используют двуручные топоры в ближнем бою.
+
+У них есть «Агрессивность» в качестве бонусного действия, что означает, что они могут эффективно передвигаться и по-прежнему атаковать.
+
+Хотя у них есть некоторый навык запугивания, я полагаю, что этот навык предназначен для того, чтобы запугивать фермеров, горожан, торговцев или другую добычу, чтобы они сдались или обратились в бегство. Чаще всего, если орк увидит вас, он нападет скорее раньше, чем позже.
+Определите вероятную стратегию.
+
+### В АТАКУ!
+
+Если у орков есть выбор, они начнут бой на расстоянии от 40 до 60 футов. Первоначально они будут рассредоточены, поскольку они достаточно мудры, чтобы знать о заклинаниях области действия. Хотя они не совсем скоординированы, все они бросятся с боевым кличем.
+
+### Определите тактику
+
+Орки начинают бой на расстоянии от 40 до 60 футов и используют бонусное действие «Агрессивность», чтобы быстро приблизиться к своим целям. Как отмечалось выше, они будут рассредоточены, если это возможно, чтобы не все могли быть поражены заклинаниями с эффектом области.
+
+За этим немедленно последует действие атаки их топорами. Они сосредотачивают свои атаки на одном противнике, пока тот не упадет, а затем переходят к следующему. Если им нужно снова использовать свой «агрессивный» заряд, чтобы добраться до следующего противника, почему бы и нет.
+
+Орки вряд ли будут подвергать себя атакам при возможности не из-за стратегии, а просто потому, что их следующей целью является ближайший видимый противник.
+
+Орки склонны сражаться насмерть, предпочитая умереть достойной смертью, чем отступить или сдаться.
+
+Хотя это несколько глупо, но если орк сражается с несколькими целями, он меняет позицию за пределы досягаемости хотя бы одной цели. Если этот ход подвергает их атакам по возможности, это риск, на который нужно пойти.
+
+Орки вооружены Пилумами(метательными копьями). Они могут эффективно метать это оружие и будут делать это против врагов, которые находятся вне досягаемости их топоров, или если они могут идентифицировать очевидного заклинателя, до которого они не могут добраться быстро, понимая опасность заклинателей.
+
+Помните точку зрения орков:
+
+Если я смогу ударить его своим топором... В АТАКУ!
+
+## Что насчет логова
+
+Орки в логове никогда не встречаются без какого-либо лидера. Даже если текущий лидер был убит, орки, скорее всего, будут следовать «плану», который он дал им для защиты. Орки, обнаружившие вторжение в свое логово, бросятся навстречу вторжению. Это происходит от двойного желания «пролить кровь своим топором» и столь же сильного «продемонстрировать свое мужество».
+
+Орки без предводителя, поддерживающего дисциплину, легко отвлекаются и могут покинуть назначенные посты, чтобы «пойти к чертовой матери».
+Итак, давайте рассмотрим один из подходов к тактике орков. Примечание: это не RAW, а просто взвешенное мнение о том, как будут сражаться эти дикие гуманоиды.
+
+Я позволил себе изменить их вооружение и тактику, чтобы они лучше отражали мощь этой расы в ее самой жестокой форме. Я предпочитаю использовать орков в качестве ударных отрядов второго уровня, авантюристы первого уровня редко видят их в действии.
+
+В качестве ударных отрядов они редко встречаются в группах, состоящих исключительно из орков. По крайней мере, в группе обычно можно найти Орога, Военачальника или Ока Груумша. В этом руководстве основное внимание будет уделено оркам, найденным без лидера.
+
+## Вариант изменения орков:
+
+### Изменение №1 — Оружие и доспехи:
+
+Орки будут захватывать и использовать лучшую броню, какую смогут найти. Хотя они редко могут найти что-то, что соответствует их типу телосложения, они, когда это возможно, приобретают щиты. Это повысит их КЗ с базовоого 13 до скорректированных 15.
+
+Использование щита, конечно же, лишит их возможности использовать двуручное оружие, такое как двуручный топор. Боевое оружие, такое как боевой топор, цеп, моргенштерн, длинный меч или боевой молот, — все это хороший выбор. Если вы решите использовать их в качестве ударных отрядов 2-го уровня, попробуйте дать им боевой стиль «Дуэлянт» для солидного бонуса +2 к урону.
+
+Кроме того, вместо пилумов они будут вооружены  либо ручными топорами, либо легкими молотами в качестве метательного оружия. 
+
+Пилумы, как маленькие копья, громоздки и их трудно носить с собой.
+
+### Изменение №2 — Тактика:
+
+Использование щита открывает две тактики для орков.
+
+Во-первых: атакуя свою цель, они будут использовать свой импульс, чтобы пытаться Сдвинуть (специальная атака) щитом и пытаться сбить ее с ног. ДА, я знаю, что это часть Мастера Щита, но это так хорошо вписывается в менталитет Орков. «Сбей его и убей», я решил, что это подходящая часть их агрессивной атаки. Как часть их атаки, я даю оркам Преимущество при проверке Силы.
+
+Сбивание противника с ног - это состязательная проверка Силы, которой персонаж может сопротивляться с помощью навыка Атлетики или Акробатики, или проверке Силы или Ловкости, если он не владеет им. Успех означает, что цель сбита с ног, что дает атакующему «преимущество» на броски атаки в ближнем бою, пока цель не встанет.
+
+Второе: вступив в ближний бой, орк атакует своим оружием и получает дополнительную атаку своим щитом.
+
+Третье: если орк находится в поле зрения противника, который кажется слабым или похожим на заклинателя, он использует свою бонусную атаку, чтобы метнуть в него оружие.
+
+### ОРОЧЬИ ОРДЫ КАМЕННЫХ ЗЕМЕЛЬ (КОРМИР)
+
+Хотя они и не так многочисленны, как гоблины, местные орки представляют собой жестокую и мощную угрозу для путешественников. Многие орки живут среди племен гоблинов, выступая в качестве наемников в рейдах и защищая логово в перерывах между действиями.
+
+Орки сами по себе живут в небольших деревнях из деревянных хижин, обычно окруженных глубоким рвом и часто огражденных бревенчатым частоколом. В каждой деревне проживает от 50 до 500 орков.
+
+Деревни орков часто расположены в укромных, скрытых местах. Война — это орки. главное преследование, поэтому их деревни охраняются патрулями и ловушками, в то время как отряд солдат остается наготове в любой момент. Эти существа сражались всю свою жизнь на протяжении поколений. Они знают, что делают.
+
+Орки не являются расовыми изоляционистами. Обычно в этих сообществах также можно найти от пяти до 20 огров, а также несколько гоблинов, хобгоблинов и полуорков (скрещенных с людьми или любой из рас, обитающих в деревне).
+
+Деревню орков возглавляет вождь и его помощники (которые также выполняют функции телохранителей). Часто в деревнях есть шаман и, возможно, знахарь с небольшими магическими способностями. Эти люди не обладают большой силой по человеческим стандартам колдовства, но они вызывают уважение и страх у всех своих собратьев. Вождь обычно делает все возможное, чтобы ограничить политическую власть этих лиц, чья способность вызывать восхищение может превосходить его собственную. Не одна группа орков была полностью захвачена шаманом или знахарем.
+
+В отличие от гоблинов, орки способны на большее, чем просто выживание. Орки изготавливают собственное оружие, выращивают урожай и создали довольно сложное общество. Они удивительно умны и способны к оригинальному дизайну и творчеству. К сожалению, они ленивы и предпочитают воровать чужие творения и идеи. Их врождённые способности сдерживаются их анималистическими наклонностями.
+
+Несмотря на это, культура орков усложнена по сравнению с основной массой их гоблиноидных родственников. У них развилось сложное мировоззрение, в котором они сами являются центром всего сущего. Все остальные живые существа, по их убеждению, существуют для того, чтобы так или иначе эксплуатироваться орками.
+
+Могущественные и хорошо обученные представители других рас особенно отвратительны в глазах орков, так как силой и умением можно владеть только в собственных руках. Орки горячо верят, что такие мерзости должны быть уничтожены, а их сила должна быть отобрана у них и использована орками.
+Социальная структура орков довольно точно имитирует человеческую культуру. Орки женятся, проводят богослужения для своих богов, кодифицируют законы и даже обучают своих детей в грубой образовательной системе. Они желают доказать другим и самим себе, что они — сложная раса. Возможно, убожество их двоюродных братьев-гоблинов подстегивает эту потребность в обретении (или уточнении, как хотели бы орки) собственной культурной идентичности.
+Однако нередко проявляется их истинная, звериная природа. Брачные клятвы среди орков редко соблюдаются, сильные господствуют над слабыми и эксплуатируют их, а орочьих детей обучают навыкам убийства, воровства и разрушения задолго до того, как им преподают какие-либо высокие культурные уроки.
+
+Орки — отличные горняки, они контролируют несколько шахт по добыче железной руды в Марках и Каменных землях. Они сами используют эту руду для изготовления оружия, доспехов и инструментов. Я никогда не открывал руду для экспорта, думаю, из-за двух непреодолимых препятствий. Во-первых, какой разумный чужеземец станет торговать с орками, а во-вторых, какой орк соизволит отправить свой товар низшей расе?
+Достижения расы орков, в отличие от талантов гоблинов, не ограничиваются насильственными искусствами грабежа и убийства. Орки также являются опытными охотниками и сносными фермерами. Опять же, в отличие от гоблинов, они не держат лютоволков или любых других одомашненных или союзных существ. Иногда деревня или семья орков могут поймать животное или монстра и заставить их служить им, но они слишком жестоки и эгоистичны, чтобы быть в состоянии приручить таких существ или подружиться с ними.
+
+Даже представители других рас, с которыми орки иногда могут вступить в союз, должны опасаться предательства или эксплуатации со стороны своих бывших друзей. Хотя орки готовы взаимодействовать и скрещиваться со всеми другими расами гоблиноидов - и даже с некоторыми человеческими пограничниками - вряд ли они действительно уважают эти другие расы. У орков много расовой гордости и высокомерия. Они уверены, что являются доминирующими людьми в мире или, по крайней мере, должны ими быть.
+
+## Шаблоны орков
+
+### ORC TEMPLATE
+
+**Ability scores:** Str +2, Con +2, Int -2
+
+**Skills** Intimidation proficient
+
+**Senses** darkvision 60 ft
+
+Traits:
+
+**Aggressive.** As a bonus action, the orc can move up to its speed toward a hostile creature that it can see.
+
+**Relentless Endurance (Recharges after a Long Rest).** When the orc is reduced to 0 hit points but not killed outright, he drops to 1 hit point instead.
+
+Actions
+
+**Melee weapon attack:** orcs prefer two handed melee weapons
+
+**Ranged weapon attack:** usually orcs use throwing melee weapons for ranged attacks, but if they want to use archers then they will use shortbows and longbows
+
+### If elite
+
+**Gruumsh’s Fury.** The orc deals an extra 4 (1d8) damage when it hits with a weapon attack (included in the attacks).
+
+OR
+
+**Foe Smiter of Ilneval.** The orc deals an extra die of damage when it hits with a melee weapon attack (included in the attack).
+
+###  If commander
+
+Gruumsh like - add Battle Cry action
+
+**Battle Cry (1/Day).** Each creature of the orc’s choice that is within 30 feet of it, can hear it, and not already affected by Battle Cry gain advantage on attack rolls until the start of the orc’s next turn. The orc can then make one attack as a bonus action.
+
+Ilneval like 
+
+**Ilneval’s Command (Recharges 4–6).** Up to three allied orcs within 120 feet of this orc that can hear it can use their reactions to each make one weapon attack.
+
+### OROG TEMPLATE
+
+**Armor:** orog will use heavy metal armors
+
+**Ability scores:** Str +4, Con +4, Int +2
+
+**Skills** Intimidation expertise
+
+**Senses** darkvision 60 ft
+
+Traits:
+
+**Aggressive.** As a bonus action, the orc can move up to its speed toward a hostile creature that it can see.
+
+**Relentless Endurance (Recharges after a Long Rest).** When the orc is reduced to 0 hit points but not killed outright, he drops to 1 hit point instead.
+
+#### Actions
+
+**Melee weapon attack:** orcs prefer two handed melee weapons
+
+**Ranged weapon attack:** usually orcs use throwing melee weapons for ranged attacks, but if they want to use archers then they will use shortbows and longbows
+
+### If elite
+
+**Gruumsh’s Fury.** The orc deals an extra 4 (1d8) damage when it hits with a weapon attack (included in the attacks).
+
+OR
+
+**Foe Smiter of Ilneval.** The orc deals an extra die of damage when it hits with a melee weapon attack (included in the attack).
+
+### If commander
+
+Gruumsh like - add Battle Cry action
+
+**Battle Cry (1/Day).** Each creature of the orc’s choice that is within 30 feet of it, can hear it, and not already affected by Battle Cry gain advantage on attack rolls until the start of the orc’s next turn. The orc can then make one attack as a bonus action.
+
+Ilneval like 
+
+**Ilneval’s Command (Recharges 4–6).** Up to three allied orcs within 120 feet of this orc that can hear it can use their reactions to each make one weapon attack.
+
+### HALFORC TEMPLATE
+
+**Skills** Intimidation proficient
+
+**Senses** darkvision 60 ft
+
+Traits:
+
+**Relentless Endurance (Recharges after a Long Rest).** When the half-orc is reduced to 0 hit points but not killed outright, he drops to 1 hit point instead.
+
+**Savage Attacks.** When he scores a critical hit the half-orc can roll one of the weapon's damage dice and add it to the extra damage of the critical hit.
+
+
 В рамках этой серии заметок я рассказывал также про других противников:
 - дуэргаров
 - дроу
