--- a/src/content/posts/articles/orcs-tactics-lore-encounters.mdx
+++ b/src/content/posts/articles/orcs-tactics-lore-encounters.mdx
@@ -20,9 +20,9 @@ tags:
 
 [Видео с вечерних разговоров про орков](https://www.youtube.com/live/Dx0kAV4tZ_M?feature=share)
 
-[Скачать ORCS - TACTICS ENCOUNTERS LORE - REV04 17122022.pdf](/files/downloads/ORCS - TACTICS ENCOUNTERS LORE - REV04 17122022.pdf)
+[Скачать ORCS - TACTICS ENCOUNTERS LORE - REV04 17122022.pdf](/files/downloads/ORCS%20-%20TACTICS%20ENCOUNTERS%20LORE%20-%20REV04%2017122022.pdf)
 
-[Скачать ORCS - TACTICS ENCOUNTERS LORE - REV04 17122022.docx](/files/downloads/ORCS - TACTICS ENCOUNTERS LORE - REV04 17122022.docx)
+[Скачать ORCS - TACTICS ENCOUNTERS LORE - REV04 17122022.docx](/files/downloads/ORCS%20-%20TACTICS%20ENCOUNTERS%20LORE%20-%20REV04%2017122022.docx)
 
 ## Базовая информация
 
