--- a/src/content/posts/articles/orcs-warlords.mdx
+++ b/src/content/posts/articles/orcs-warlords.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Создание орка военачальника на основе таблиц'
+title: 'Создание орка полководца и его армии на основе таблиц'
 description: 'Инструмент для мастера позволяющий на основе таблиц создать уникального орка военачальника'
 date: 2023-06-01
 tags:
