--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -92,7 +92,7 @@ copper [Herbs of Forgotten Realms](https://www.dmsguild.com/product/291511/Herbs
 
 ### Руководство по Roll20
 
-[Старое руководство по Roll20]()
+[Старое руководство по Roll20](https://cyborgsandmages.gitbook.io/palant-roll20-guide/)
 
 ### Руководство по Foundry
 
