--- a/src/content/posts/translations/art-of-combat-small-troop-roles.mdx
+++ b/src/content/posts/translations/art-of-combat-small-troop-roles.mdx
@@ -1,16 +1,16 @@
 ---
 title: "Искусство боя малым отрядом: Роль существ"
-description: Перевод статьи про роли существ
-date: 2023-07-08
+description: "Перевод статьи про роли существ"
+date: "2023-07-08"
 tags:
-  - Тактика
-  - Роли существ
-  - Существа
-  - Бестиарий
-  - Советы мастеру
-  - Столкновения
-author: Basheer Ghouse
-translator: Станислав "Drakzar" Иванов
+  - "Тактика"
+  - "Роли существ"
+  - "Существа"
+  - "Бестиарий"
+  - "Советы мастеру"
+  - "Столкновения"
+author: "Basheer Ghouse"
+translator: 'Станислав "Drakzar" Иванов'
 ---
 
 текст [Basheer Ghouse](https://vk.com/away.php?to=http://koboldpress.com/author/?authorname=Basheer%20Ghouse&cc_key=) от 06 ноября 2020 года
