--- a/src/content/posts/articles/orcs-tactics-lore-encounters.mdx
+++ b/src/content/posts/articles/orcs-tactics-lore-encounters.mdx
@@ -168,7 +168,7 @@ If train is escorted Add 10 orcs per cart, 1 orc sub-chieftain and 5d6 orc bodyg
 
 Охотничья группа — дальше от поселений персонажи могут столкнуться с группами от 2 до 8 (2к4) орков или полуорков во главе с орогом. Они будут вооружены луками или пилумами, а также мечами. Они могут носить или не носить доспехи. Эти орки охотятся на животных. Возможно, они охотятся для развлечения, но, скорее всего, они охотятся за едой, шкурами, рогами и костями, либо для снабжения своей деревни, либо для продажи другим. Они могут быть недовольны тем, что делятся своими охотничьими угодьями, или могут окликнуть ИП и попытаться торговать. 
 
-Группа налетчиков — по всему лесу персонажи могут встретить от 5 до 10 орков(1к6+4), полуорков и/или полуогров во главе с орогом или, возможно, даже с Оком Груумша. Они будут вооружены для войны как дальнобойным оружием, так и оружием ближнего боя. Они обязательно будут в доспехах. Их могут сопровождать ворги. В зависимости от того, насколько они успешны, у них также может быть добыча и пленные рабы. Если они поверят, что могут взять компьютеры, то просто нападут. В противном случае они будут вести переговоры или пытаться избежать группы авантюристов. 
+Группа налетчиков — по всему лесу персонажи могут встретить от 5 до 10 орков(1к6+4), полуорков и/или полуогров во главе с орогом или, возможно, даже с Оком Груумша. Они будут вооружены для войны как дальнобойным оружием, так и оружием ближнего боя. Они обязательно будут в доспехах. Их могут сопровождать ворги. В зависимости от того, насколько они успешны, у них также может быть добыча и пленные рабы. Если они поверят, что могут взять персонажей игроков, то просто нападут. В противном случае они будут вести переговоры или пытаться избежать группы авантюристов. 
 
 Торговый караван — по всему лесу персонаж может встретить от 6 до 60 (10к6) орков, полуорков и/или полуогров, возможно, во главе с орогом. Большинство из них будут вооружены как метательным оружием, так и оружием ближнего боя, плюс все они будут носить доспехи. У них будет от 1 до 10 повозок (1к10), запряженных мулами или волами, наполненных товарами. Это деловые люди и их охрана. Они не заинтересованы в ИП, если они не хотят стать клиентами. Они будут упорно бороться, чтобы сохранить имущество, которое принадлежит им. 
 
