--- a/src/content/posts/articles/goblins-tactics-lore-encounters.mdx
+++ b/src/content/posts/articles/goblins-tactics-lore-encounters.mdx
@@ -17,15 +17,15 @@ tags:
 
 ## Первая версия
 
-В формате pdf [Скачать Goblin encounters.pdf](/files/downloads/Goblin encounters.pdf)
+В формате pdf [Скачать Goblin encounters.pdf](files/downloads/Goblin%20encounters.pdf)
 
-В формате docx [Скачать Goblin encounters.docx](/files/downloads/Goblin encounters.docx)
+В формате docx [Скачать Goblin encounters.docx](/files/downloads/Goblin%20encounters.docx)
 
 ## Вторая версия
 
-В формате pdf  [Скачать GOBLINS - TACTICS ENCOUNTERS LORE - REV01 04122022.pdf](/files/downloads/GOBLINS - TACTICS ENCOUNTERS LORE - REV01 04122022.pdf)
+В формате pdf  [Скачать GOBLINS - TACTICS ENCOUNTERS LORE - REV01 04122022.pdf](/files/downloads/GOBLINS%20-%20TACTICS%20ENCOUNTERS%20LORE%20-%20REV01%2004122022.pdf)
 
-В формате docx [Скачать GOBLINS - TACTICS ENCOUNTERS LORE - REV01 04122022.docx](/files/downloads/GOBLINS - TACTICS ENCOUNTERS LORE - REV01 04122022.docx)
+В формате docx [Скачать GOBLINS - TACTICS ENCOUNTERS LORE - REV01 04122022.docx](/files/downloads/GOBLINS%20-%20TACTICS%20ENCOUNTERS%20LORE%20-%20REV01%2004122022.docx)
 
 ## Другие статьи
 
