--- a/src/content/posts/articles/drow-tactics-lore-encounters.mdx
+++ b/src/content/posts/articles/drow-tactics-lore-encounters.mdx
@@ -21,7 +21,9 @@ tags:
 
 ## Заметки про тактику
 
-В формате pdf [Скачать Palant Guide to tactics - Drow 07042022 rev 03.pdf](PALANT%20GUIDE%20TO%20TACTICS%20-%20DROW%2007042022%20rev03%20.pdf)
+В формате docx [Скачать Palant Guide to tactics - Drow 07042022 rev 03.docx](PALANT%20GUIDE%20TO%20TACTICS%20-%20DROW%2007042022%20rev03.docx)
+
+В формате pdf [Скачать Palant Guide to tactics - Drow 07042022 rev 03.pdf](PALANT%20GUIDE%20TO%20TACTICS%20-%20DROW%2007042022%20rev03.pdf)
 
 ## Видео
 [Киборги и Чародеи - вечерний разговор про дроу в пятой редакции](https://www.youtube.com/live/iIG2RiAxPZY?feature=share)
@@ -38,8 +40,6 @@ tags:
 
 [Гоблины](https://cyborgsandmages.com/posts/articles/goblins-tactics-lore-encounters)
 
-[Дроу](https://cyborgsandmages.com/posts/articles/drow-tactics-lore-encounters)
-
-[Дуэргары](https://cyborgsandmages.com/posts/articles/duergars-tactics-lore-encounters) https://www.youtube.com/live/AeojF8FdcPE?feature=share
+[Дуэргары](https://cyborgsandmages.com/posts/articles/duergars-tactics-lore-encounters)
 
 [Гнолли](https://cyborgsandmages.com/posts/articles/gnolls-tactics-lore-encounters)
