--- a/src/content/posts/articles/bestiary-tactics-index.mdx
+++ b/src/content/posts/articles/bestiary-tactics-index.mdx
@@ -17,6 +17,8 @@ tags:
 
 Это индекс статей и замеок про тактики существ, которые были написаны Палантом:
 
+## Написано
+
 [Орки](https://cyborgsandmages.com/posts/articles/orcs-tactics-lore-encounters)
 
 [Хобгоблины](https://cyborgsandmages.com/posts/articles/hobgoblins)
@@ -25,17 +27,23 @@ tags:
 
 [Дроу](https://cyborgsandmages.com/posts/articles/drow-tactics-lore-encounters)
 
-Не залиото на сайт
+## Не залиото на сайт
 
 [Дуэргары](https://cyborgsandmages.com/posts/articles/duergars-tactics-lore-encounters)
 
-Не написано
+## Заказано
 
 [Гнолли](https://cyborgsandmages.com/posts/articles/gnolls-tactics-lore-encounters)
+
+## Не написано
 
 [Кобольды](https://cyborgsandmages.com/posts/articles/kobolds-tactics-lore-encounters)
 
 [Великаны](https://cyborgsandmages.com/posts/articles/giants-tactics-lore-encounters)
+
+<hr/>
+
+Если вы хотите, чтобы мы рассмотрели тактику каких-то существ, возможно, с учетом ваших пожеланий, - пишите нам в discord или телеграм.
 
 
 
