--- a/src/content/posts/articles/bestiary-tactics-index.mdx
+++ b/src/content/posts/articles/bestiary-tactics-index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Индекс статей про тактики существ
-description: Индекс статей про тактики существ
+description: Индекс статей про тактики существ. Если вы хотите чтобы мы написали о конкретных существах, то напишите нам.
 date: 2023-06-01
 tags:
   - Бестиарий
@@ -17,7 +17,15 @@ tags:
 
 Это индекс статей и замеок про тактики существ, которые были написаны Палантом:
 
-## Написано
+## Общие понятия
+
+[Про Боевой дух](https://cyborgsandmages.com/posts/core-d20/mysli-vsluh-dnevnik-razrabotchika-srazhenie-boevoj-duh)
+
+[Про Тактику]()
+
+[Про Роли существ]()
+
+## Тактики существ
 
 [Орки](https://cyborgsandmages.com/posts/articles/orcs-tactics-lore-encounters)
 
