--- a/src/content/posts/articles/drow-tactics-lore-encounters.mdx
+++ b/src/content/posts/articles/drow-tactics-lore-encounters.mdx
@@ -21,9 +21,9 @@ tags:
 
 ## Заметки про тактику
 
-В формате docx [Скачать Palant Guide to tactics - Drow 07042022 rev 03.docx](PALANT%20GUIDE%20TO%20TACTICS%20-%20DROW%2007042022%20rev03.docx)
+В формате docx [Скачать Palant Guide to tactics - Drow 07042022 rev 03.docx](/files/downloads/PALANT%20GUIDE%20TO%20TACTICS%20-%20DROW%2007042022%20rev03.docx)
 
-В формате pdf [Скачать Palant Guide to tactics - Drow 07042022 rev 03.pdf](PALANT%20GUIDE%20TO%20TACTICS%20-%20DROW%2007042022%20rev03.pdf)
+В формате pdf [Скачать Palant Guide to tactics - Drow 07042022 rev 03.pdf](/files/downloads/PALANT%20GUIDE%20TO%20TACTICS%20-%20DROW%2007042022%20rev03.pdf)
 
 ## Видео
 [Киборги и Чародеи - вечерний разговор про дроу в пятой редакции](https://www.youtube.com/live/iIG2RiAxPZY?feature=share)
